<resources>
    <string name="app_name">Einschlafhilfe</string>
    <string name="alle_folgen">Alle Folgen</string>
    <string name="string_folgen_1_150">1 – 150</string>
    <string name="string_folgen_1_100">1 – 100</string>
    <string name="string_folgen_1_50">1 – 50</string>
    <string name="app_name_long">Die drei ??? - Einschlafhilfe</string>
    <string name="die_drei">Die Dr3i</string>
    <string name="neuvertonung">Anhören als Neuvertonung</string>
    <string name="informationen">Informationen auf rocky-beach.com</string>
    <string name="cover_error">Fehler beim laden des Covers.</string>
    <string name="close">Schließen</string>
    <string name="privacy">Datenschutzerklärung</string>
    <string name="settings">Einstellungen</string>
    <string name="use_spotify">Spotify benutzen </string>
    <string name="welcome">Willkommen</string>
    <string name="dialog_list">Folgenliste wird aktualisiert…</string>
    <string name="update_list">Online Modus</string>
    <string name="welcome_text">Bevor es richtig losgehen kann müssen wir ein paar Fragen klären und dich über unsere Datenschutzerklärung aufmerksam machen.</string>
    <string name="not_installed">Spotify ist nicht installiert.</string>
    <string name="album_auf_spotify_anzeigen">Album auf Spotify anzeigen</string>
    <string name="no_internet_dialog_title">Keine Datenverbindung</string>
    <string name="no_internet_dialog_text">Stelle eine Verbindung zum Internet her und probiere es erneut.</string>
    <string name="base_url">https://api.citroncode.com/android/ddf/v5/</string>
    <string name="output">%1$s. %2$s</string>
    <string name="intro_data">Wenn du den Online Modus verwendest werden Daten durch unseren Provider erhoben, diese sind nicht personenbezogen und werden nach 90 Tagen automatisch gelöscht.\n\nSobald du unsere App verlässt um dir eine Folge anzuhören werden Daten durch Spotify erhoben, die Datenschutzerklärung von Spotify ist in unserer Datenschutzerklärung verlinkt.</string>
    <string name="spotify_base_url">https://open.spotify.com/album/</string>
    <string name="cover_citroncode_url">https://api.citroncode.com/android/ddf/v5/cover/cover_</string>
    <string name="cover_citroncode_dd_url">https://api.citroncode.com/android/ddf/android_api/cover/dd</string>
    <string name="external_cover_url">https://www.rocky-beach.com/hoerspiel/cover/</string>
    <string name="fehler_glide">Ein Fehler ist aufgetreten, bitte versuche es erneut!</string>
    <string name="dialog_third_party">Bibliotheken von Drittanbietern</string>
    <string name="glide">Glide</string>
    <string name="appintro">AppIntro</string>
    <string name="reload">Erneut versuchen</string>
    <string name="about">Über</string>
    <string name="about_long">Die Einschlafhilfe App schlägt dir Folgen der drei Detektive aus Rocky Beach vor.</string>
    <string name="die_drei_fragezeichen_kids">Die Drei Fragezeichen Kids</string>
    <string name="die_dr3i">Die Dr3i</string>
    <string name="die_drei_fragezeichen_sonderfolgen">Die drei ??? Sonderfolgen</string>
    <string name="die_drei_fragezeichen_kids_sonderfolgen">Die drei ??? Kids Sonderfolgen</string>
    <string name="benutzerdefinierte_einstellungen">Benutzerdefinierte Einstellungen</string>
    <string name="hier_kannst_du_nun_ausw_hlen_welche_folgen_du_h_ren_mochtest_in_welchen_bereicht_diese_liegen_sollen_und_ob_sonderfolgen_auch_angezeigt_werden_sollen">Hier kannst du den Bereich selber anpassen um Folgen vorgeschlagen zu bekommen.</string>
    <string name="die_drei_fragezeichen">Die Drei Fragezeichen</string>
    <string name="benutzerdefiniert">Benutzerdefiniert</string>
    <string name="version">Version</string>
    <string name="abt_long">Mit der Einschlafhilfe ist es möglich sich eine Folge der drei Fragezeichen durch verschiedene Filter vorschlagen zu lassen.\n\nBei dieser App handelt es sich um eine Fan Produktion von Marvin Stelter.\nDer Quellcode dieser App ist auf Github veröffentlicht und unter der MIT Lizenz lizensiert.</string>
    <string name="copyright_notice_abt"><![CDATA[\n„Die drei ???“ sind eine eingetragene Marke der Franckh-Kosmos Verlags-GmbH & Co. KG, Stuttgart. \nCopyright \nDiese App ist NICHT im Besitz von Kosmos, Europa, der Familie Roberts oder anderen Personen, die in die Produktion der Serie Die drei ??? eingebunden sind. \nAlle Schutzmarken, Logos und Copyrights gehören ihren jeweiligen Besitzern. \nAlle Bilder © copyright by Kosmos, Europa, Studios Hamburg, USM oder Random House.]]></string>
    <string name="quellcode">Quellcode</string>
    <string name="license">Lizenzen</string>
    <string name="third_party_libraries">Drittanbieter Bibliotheken</string>
    <string name="kids">Kids</string>
    <string name="cb_privacy">Ich habe die Datenschutzerklärung gelesen und akzeptiere diese.</string>
    <string name="cover">Cover</string>
    <string name="expandablelayout">ExpandableLayout</string>
    <string name="by_cachapa">von Cachapa</string>
    <string name="contact_us">Kontaktiere uns</string>
    <string name="open">Mehr Informationen</string>
    <string name="by_bumptech">von Bump Technologies</string>
    <string name="app_intro">AppIntro</string>
    <string name="app_intro_team">vom AppIntro Team</string>
    <string name="by_square">von Square</string>
    <string name="okhttp">OkHttp</string>
    <string name="kotlin_coroutines_okhttp">Coroutines OkHttp</string>
    <string name="by_gildor">von Andrey Mischenko</string>
    <string name="kontakt">Kontakt</string>
    <string name="theme">App Theme auswählen</string>
    <string name="bob">Bob</string>
    <string name="justus">Justus</string>
    <string name="peter">Peter</string>
    <string name="about_libs">Drittanbieter Bibliotheken</string>
    <string name="prefs_theme_key">theme</string>
    <string name="die_drei_sonderfolgen">Die drei ??? Sonderfolgen</string>
    <string name="die_drei_kids_sonderfolgen">Die drei ??? Kids Sonderfolgen</string>
    <string name="die_drei_h_rb_cher">Die drei ??? Hörbücher</string>
    <string name="filterliste">Filterliste</string>
    <string name="klick_auf_den_button_unten_um_folgen_auszublenden_die_du_z_b_nicht_im_besitz_hast_oder_nicht_gerne_h_rst">Klick auf den Button unten, um Folgen auszublenden, die du z. B. nicht im Besitz hast oder nicht gerne hörst.</string>
    <string name="folgen_ausw_hlen">Folgen auswählen</string>
    <string name="es_wurden_noch_keine_folgen_hinzugef_gt">Es wurden noch keine Folgen hinzugefügt</string>
    <string name="nummer">Nummer: %1$s</string>
    <string name="name_der_folge">Name der Folge</string>
    <string name="filter_liste">Filterliste</string>
    <string name="folge_laedt_noch">Bitte warte, bis eine Folge ausgewählt worden ist.</string>
    <string name="information">Information</string>
    <string name="ddf">Die drei ???</string>
    <string name="filter_informations">Hier kannst du Folgen auswählen, die du z.B. nicht gerne hörst oder im Besitz hast.\n\nAlgorithmus:\nJe mehr Folgen einer Art ausgewählt werden, desto weniger wird diese Art angezeigt. Wieso? Es wird erst die Art und dann die Folge ausgewählt, falls diese im Filter ist wird wieder die Folgen Art ausgewählt und so weiter.</string>
    <string name="hoerbuecher">Hörbücher</string>
</resources>
