<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="25sp"
                android:layout_marginTop="100dp"
                android:layout_marginStart="20dp"
                android:id="@+id/tv_name_header"
                android:layout_alignParentStart="true"
                android:text="@string/app_name_long"
                android:layout_height="wrap_content"/>

            <View
                android:layout_width="200dp"
                android:layout_height="5dp"
                android:layout_marginStart="20sp"
                android:background="@color/white"
                android:layout_below="@id/tv_name_header"/>

            <LinearLayout
                android:orientation="vertical"
                android:layout_below="@id/tv_name_header"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/abt_long"
                    android:textColor="@color/white" />
                <TextView
                    android:layout_width="wrap_content"
                    android:text="@string/copyright_notice_abt"
                    android:textColor="@color/white"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginTop="20dp"
                    android:text="@string/privacy"
                    android:id="@+id/btn_privacy"
                    android:textColor="@color/black"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginTop="0dp"
                    android:text="@string/quellcode"
                    android:textColor="@color/black"
                    android:id="@+id/btn_quellcode"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginTop="0dp"
                    android:text="@string/kontakt"
                    android:textColor="@color/black"
                    android:id="@+id/btn_contact"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_marginTop="0dp"
                    android:text="@string/license"
                    android:textColor="@color/black"
                    android:id="@+id/btn_license"
                    android:backgroundTint="@color/white"
                    android:layout_height="wrap_content"/>


                <net.cachapa.expandablelayout.ExpandableLayout
                    android:id="@+id/expandable_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:el_duration="1000"
                    app:el_expanded="false"
                    android:layout_marginBottom="5dp"
                    app:el_parallax="0.5">

                    <include
                        android:id="@+id/included"
                        layout="@layout/layout_libraries"/>

                </net.cachapa.expandablelayout.ExpandableLayout>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>