<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@color/black"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/okhttp"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/by_square"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:id="@+id/btn_okhttp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/open"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:background="#2F2F2F"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/kotlin_coroutines_okhttp"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/by_gildor"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/open"
            android:id="@+id/btn_coroutines_okhttp"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:background="#2F2F2F"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_intro"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/app_intro_team"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/btn_app_intro"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerInParent="true"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/open"
            android:textColor="@color/white" />

        <View
            android:layout_width="match_parent"
            android:background="#2F2F2F"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/glide"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/by_bumptech"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:layout_width="wrap_content"
            android:text="@string/open"
            android:layout_centerInParent="true"
            android:id="@+id/btn_glide"
            android:backgroundTint="@color/colorPrimary"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:background="#2F2F2F"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp">
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:orientation="vertical"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/expandablelayout"
                android:layout_centerInParent="true"
                android:layout_alignParentStart="true"
                android:layout_marginStart="5dp"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/by_cachapa"
                android:layout_height="wrap_content"/>
        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:layout_width="wrap_content"
            android:text="@string/open"
            android:layout_centerInParent="true"
            android:id="@+id/btn_ex_layout"
            android:backgroundTint="@color/colorPrimary"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="5dp"
            android:textColor="@color/white"
            android:layout_height="wrap_content"/>

        <View
            android:layout_width="match_parent"
            android:background="#2F2F2F"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_alignParentBottom="true"
            android:layout_height="1dp"/>
    </RelativeLayout>



</androidx.appcompat.widget.LinearLayoutCompat>